Add file integrity and process monitor filters

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -167,6 +167,8 @@
   "txt-indicator": "Indicator",
   "txt-online": "Online",
   "txt-offline": "Offline",
+  "txt-isEnabled": "Enabled",
+  "txt-isDisabled": "Disabled",
   "txt-inActivate": "Inactivate",
   "txt-connected": "Connected",
   "txt-disconnected": "Disconnected",
@@ -505,6 +507,8 @@
       "txt-netProxyIP": "NetProxy IP",
       "txt-netProxyName": "NetProxy Name",
       "txt-threatsLevel": "Threats Level",
+      "txt-fileIntegrity": "File Integrity",
+      "txt-procMonitor": "Process Monitor",
       "txt-overview": "Overview",
       "txt-safetyScanInfo": "Safety Scan Record",
       "txt-softwareInventory": "Software Inventory",
@@ -532,6 +536,7 @@
     "txt-report-nccst": "Report NCCST",
     "txt-report-kbid": "Report KBID",
     "txt-kbidName": "KBID Name",
+    "txt-endpoint": "Endpoint",
     "txt-ipOrHostName": "IP or Host Name",
     "txt-exposedDevices": "Exposed Devices",
     "txt-departmentName": "Department",
