--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -167,6 +167,8 @@
   "txt-indicator": "Indicator",
   "txt-online": "連線",
   "txt-offline": "離線",
+  "txt-isEnabled": "已啟用",
+  "txt-isDisabled": "未啟用",
   "txt-inActivate": "未安裝",
   "txt-connected": "已連線",
   "txt-disconnected": "已離線",
@@ -505,6 +507,8 @@
       "txt-netProxyIP": "NetProxy IP",
       "txt-netProxyName": "NetProxy名稱",
       "txt-threatsLevel": "威脅指數",
+      "txt-fileIntegrity": "File Integrity",
+      "txt-procMonitor": "Process Monitor",
       "txt-overview": "主機分析資訊",
       "txt-safetyScanInfo": "安全掃描紀錄",
       "txt-softwareInventory": "軟體清單",
@@ -532,6 +536,7 @@
     "txt-report-nccst": "回報NCCST",
     "txt-report-kbid": "回報KBID",
     "txt-kbidName": "KBID名稱",
+    "txt-endpoint": "端點主機",
     "txt-ipOrHostName": "IP或主機",
     "txt-exposedDevices": "資產數量",
     "txt-departmentName": "部門",
