Add More... button to trigger endpoint tasks

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -517,7 +517,19 @@
       "txt-taskName": "Task Name",
       "txt-taskStatus": "Task Status",
       "txt-taskCreateDttm": "Create Datetime",
-      "txt-taskResponseDttm": "Resposne Datetime"
+      "txt-taskResponseDttm": "Resposne Datetime",
+      "txt-endpointDetection": "Endpoint Detection",
+      "txt-hmd": "HMD",
+      "txt-malwareDetection": "Malware Detection",
+      "txt-cveDetection": "CVE Detection",
+      "txt-kbidDetection": "KBID Detection",
+      "txt-gcbDetection": "GCB Detection",
+      "txt-updateGpo": "Update GPO",
+      "txt-procMonitorDisable": "Process Monitor (Disable)",
+      "txt-fileIntegrityMonitorDisable": "File Integrity (Disable)",
+      "txt-upgradeHmd": "Upgrade HMD",
+      "txt-uploadHmdPrograms": "Upload HMD Programs",
+      "txt-settings": "Settings"
     },
     "txt-endpointSecuritySettings": "Endpoint Security Settings",
     "txt-securityDiagnostic": "Security Diagnostic",
