--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -270,7 +270,7 @@
   "txt-threats": "Threats",
   "txt-syslog-en": "Syslog",
   "txt-netflow": "Netflow",
-  "txt-endpoint": "Endpoint",
+  "txt-endpoint": "端點主機",
   "txt-configuration": "Configuration",
   "txt-accountConfig": "Account Configuration",
 
@@ -414,8 +414,8 @@
     "txt-vulnerabilities": "Vulnerabilities",
     "txt-inventory": "Inventory",
     "txt-kbid": "KBID",
-    "txt-endpoints": "Endpoints",
-    "txt-endpointInfo": "Endpoint資訊",
+    "txt-endpoints": "端點主機",
+    "txt-endpointInfo": "端點主機資訊",
     "vulnerabilities": {
       "txt-severityLevelQuery": "弱點暴露等級",
       "txt-monthlySeverityTrend": "當月每日漏洞等級趨勢",
@@ -507,8 +507,8 @@
       "txt-netProxyIP": "NetProxy IP",
       "txt-netProxyName": "NetProxy名稱",
       "txt-threatsLevel": "威脅指數",
-      "txt-fileIntegrity": "File Integrity",
-      "txt-procMonitor": "Process Monitor",
+      "txt-fileIntegrity": "檔案完整性掃描",
+      "txt-procMonitor": "處理程序掃描",
       "txt-overview": "主機分析資訊",
       "txt-safetyScanInfo": "安全掃描紀錄",
       "txt-softwareInventory": "軟體清單",
@@ -517,7 +517,19 @@
       "txt-taskName": "安全掃描類型",
       "txt-taskStatus": "執行狀態",
       "txt-taskCreateDttm": "建立時間",
-      "txt-taskResponseDttm": "回應時間"
+      "txt-taskResponseDttm": "回應時間",
+      "txt-endpointDetection": "端點主機檢測",
+      "txt-hmd": "HMD",
+      "txt-malwareDetection": "惡意程式檢測",
+      "txt-cveDetection": "CVE檢測",
+      "txt-kbidDetection": "KBID檢測",
+      "txt-gcbDetection": "GCB檢測",
+      "txt-updateGpo": "更新GPO",
+      "txt-procMonitorDisable": "處理程序掃描 (停用)",
+      "txt-fileIntegrityMonitorDisable": "檔案完整性掃描 (停用)",
+      "txt-upgradeHmd": "升級HMD",
+      "txt-uploadHmdPrograms": "上傳HMD安裝檔",
+      "txt-settings": "設定"
     },
     "txt-endpointSecuritySettings": "端點安全設定",
     "txt-securityDiagnostic": "資安健診",
