--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -797,7 +797,9 @@
     "product": "Product",
     "system": "System",
     "version": "Version",
-    "fix": "Fixed"
+    "fix": "Fixed",
+    "txt-kbid": "KBID",
+    "txt-detectedDttm": "Detected Time"
   },
   "hostVulnerabilityFields": {
     "date": "Date",
