--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -452,7 +452,7 @@
       "txt-fileSHA1": "SHA1",
       "txt-fileSHA256": "SHA256",
       "txt-fileSize": "檔案大小",
-      "txt-virusTotal": "Virus Total",
+      "txt-virusTotal": "病毒數量",
       "txt-companyName": "企業名稱",
       "txt-isPE": "是否為PE檔",
       "txt-isPEExtension": "是否為PE副檔名",
@@ -515,6 +515,7 @@
       "txt-softwareInventory": "軟體清單",
       "txt-discoveredVulnerability": "軟體漏洞清單",
       "txt-kbid": "KBID",
+      "txt-malware": "惡意軟體清單",
       "txt-taskName": "安全掃描類型",
       "txt-taskStatus": "執行狀態",
       "txt-taskCreateDttm": "建立時間",
@@ -540,7 +541,8 @@
       "txt-logoffAllUsers": "登出",
       "txt-netcut": "斷網",
       "txt-netcutResume": "恢復",
-      "txt-terminateHmd": "結束"
+      "txt-terminateHmd": "結束",
+      "txt-md5": "Hash Value (MD5)"
     },
     "txt-endpointSecuritySettings": "端點安全設定",
     "txt-securityDiagnostic": "資安健診",
@@ -726,7 +728,7 @@
     "txt-queryEvents": "查看詳細資料",
     "txt-queryMoreEvents": "檢查其它告警紀錄",
     "txt-queryMoreLogs": "檢查Logs紀錄",
-    "txt-searthVirustotal": "查詢Virustotal",
+    "txt-searthVirustotal": "查詢病毒數量",
     "txt-downloadPCAP": "$t(txt-download)PCAP",
     "txt-downloadFile": "下載惡意程式",
     "txt-ipInfo": "IP資訊",
