--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -71,6 +71,7 @@
   "txt-edit": "編輯",
   "txt-add": "新增",
   "txt-add2": "加入",
+  "txt-addWhiteList": "加入白名單",
   "txt-existing": "現有",
   "txt-more": "更多",
   "txt-query": "查詢",
@@ -264,6 +265,7 @@
   "txt-addedList": "已選清單",
   "txt-fileNameEmpty": "請檢查檔案名稱",
   "txt-fileNameInvalid": "檔案名稱只能包含英文字母，數字，橫槓底線",
+  "txt-confirmWhiteList": "確定要加入白名單",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
@@ -411,6 +413,7 @@
   "host": {
     "txt-hostList": "主機列表",
     "txt-cpePage": "CPE維護",
+    "txt-malware": "惡意程式",
     "txt-vulnerabilities": "Vulnerabilities",
     "txt-inventory": "Inventory",
     "txt-kbid": "KBID",
@@ -447,17 +450,31 @@
       "txt-kibd": "可修補KBID"
     },
     "malware": {
-      "txt-exposedDevices": "裝置數量",
-      "txt-fileMD5": "MD5",
-      "txt-fileSHA1": "SHA1",
-      "txt-fileSHA256": "SHA256",
+      "txt-malwareList": "惡意程式清單",
+      "txt-malwareDetails": "惡意程式詳細資訊",
+      "txt-malwareInfo": "惡意程式資訊",
+      "txt-exposedDevices": "暴露的裝置",
+      "txt-exposedDevicesCount": "暴露的裝置數量",
+      "txt-exposedDeviceCount": "暴露的裝置數量",
+      "txt-notExposedDeviceCount": "未暴露的裝置數量",
+      "txt-endpointCount": "總裝置數量",
+      "txt-fileMD5": "Hash Value (MD5)",
+      "txt-fileSHA1": "Hash Value (SHA1)",
+      "txt-fileSHA256": "Hash Value (SHA256)",
       "txt-fileSize": "檔案大小",
       "txt-virusTotal": "病毒數量",
       "txt-companyName": "企業名稱",
-      "txt-isPE": "是否為PE檔",
-      "txt-isPEExtension": "是否為PE副檔名",
-      "txt-isVerifyTrust": "是否為有效簽章",
-      "txt-virusName": "病毒名稱"
+      "txt-isPE": "PE檔",
+      "txt-isPEExtension": "PE副檔名",
+      "txt-isVerifyTrust": "有效簽章",
+      "txt-virusName": "病毒名稱",
+      "txt-dailyFoundMalwares": "每日惡意程式數量",
+      "txt-currentCount": "仍存在",
+      "txt-reduceCount": "已移除",
+      "txt-top10MalwareEndpointCounts": "10大惡意程式",
+      "txt-malware": "惡意程式",
+      "txt-endpoint": "端點主機",
+      "txt-hostList": "弱點主機清單"
     },
     "inventory": {
       "txt-discoveredVulnerability": "軟體漏洞清單",
@@ -487,7 +504,7 @@
     },
     "kbid": {
       "txt-kbidList": "KBID清單",
-      "txt-vulnerabilityList": "弱點主機清單",
+      "txt-nccstList": "弱點主機清單",
       "txt-kbid": "KBID",
       "txt-detectedDttm": "偵測時間"
     },
@@ -652,7 +669,7 @@
     "txt-vansMedium": "CVE中風險",
     "txt-vansLow": "CVE低風險",
     "txt-gcbCounts": "GCB問題",
-    "txt-malwareCounts": "Malware威脅",
+    "txt-malwareCounts": "惡意程式威脅",
     "txt-tableOptions": "功能",
     "txt-hmdStats": "弱點統計",
     "txt-threatsDevice": "威脅主機",
@@ -1208,13 +1225,13 @@
     "txt-terminate": "停用",
     "txt-serverOs": "Server使用系統",
     "txt-pcOs": "PC使用系統",
-    "txt-scanFileWhitelist": "Malware白名單",
+    "txt-scanFileWhitelist": "惡意程式白名單",
     "txt-whitelistSize": "當前白名單數量",
     "scan-list": {
       "txt-dashboard": "Dashboard",
       "txt-yara": "Yara Scan",
-      "txt-scanFile": "Malware",
-      "txt-scanFileLinux": "Malware - Linux",
+      "txt-scanFile": "惡意程式",
+      "txt-scanFileLinux": "惡意程式 - Linux",
       "txt-importGcbAndGcbDetection": "GCB",
       "txt-gcb": "GCB",
       "txt-ir": "IR",
