--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -3,7 +3,6 @@
     "en":"English",
     "zh":"中文"
   },
-
   "txt-on": "開",
   "txt-off": "關",
   "txt-true": "是",
@@ -266,7 +265,6 @@
   "txt-fileNameEmpty": "請檢查檔案名稱",
   "txt-fileNameInvalid": "檔案名稱只能包含英文字母，數字，橫槓底線",
   "txt-confirmWhiteList": "確定要加入白名單",
-
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
   "txt-threats": "Threats",
@@ -275,27 +273,24 @@
   "txt-endpoint": "端點主機",
   "txt-configuration": "Configuration",
   "txt-accountConfig": "Account Configuration",
-
   "txt-connections-eng": "Connections",
   "txt-dns": "DNS",
-
   "txt-edgeManage": "Edge管理",
   "txt-topology": "網路拓樸",
   "txt-accountManage": "帳號管理",
   "txt-syslogManage": "系統日誌管理",
   "txt-syslogConfig": "系統日誌設定",
   "txt-systemDefinedPattern": "系統預設Pattern管理",
+  "txt-mlRuleManagement": "ML規則管理",
   "txt-serviceStatus": "服務狀態",
   "txt-networkInventory": "網路清單",
   "txt-productInfo": "產品資訊",
   "txt-issuesFeedback": "問題回報",
-
   "txt-esManage": "ES管理",
   "txt-importEsIndex": "匯入索引",
   "txt-esImportMsg": "請選擇要匯入的索引日期",
   "txt-auditLog": "稽核紀錄",
   "txt-exportAuditLog": "$t(txt-export)$t(txt-auditLog)",
-
   "txt-edge": "Edge",
   "txt-threatIntelligence": "威脅情資",
   "txt-addDepartment": "新增部門",
@@ -323,7 +318,6 @@
   "txt-updateTime": "更新時間",
   "txt-timeRangeError": "請檢查時間區間",
   "txt-verificationCode": "驗證碼",
-
   "txt-listText": "列表",
   "txt-uploadPhoto": "上傳照片",
   "txt-required": "此為必填欄位",
@@ -339,15 +333,12 @@
   "txt-commaSeparated": "用逗號,區隔",
   "txt-privilegeError": "此角色還在被帳號使用中",
   "txt-ownerIsRequired": "所屬人員為必填",
-
   "txt-statistics": "統計",
   "txt-table": "列表",
   "txt-linkAnalysis": "關聯",
   "txt-map": "地圖",
-
   "txt-setOrganization": "設定組織架構",
   "txt-defaultUnit": "目前預設機關",
-
   "time-interval": {
     "txt-search-manual": "自訂時間",
     "txt-search-auto": "定期更新",
@@ -373,7 +364,6 @@
     "txt-week": "本週",
     "txt-chart-interval": "圖表區間"
   },
-
   "dashboard": {
     "txt-overview": "Overview",
     "txt-statisticsInfo": "統計資料",
@@ -409,7 +399,6 @@
     "txt-max": "授權數",
     "txt-hosts": "主機"
   },
-
   "host": {
     "txt-hostList": "主機列表",
     "txt-cpePage": "CPE維護",
@@ -498,7 +487,8 @@
       "txt-policyName": "原則設定名稱",
       "txt-securityCategory": "安全類別",
       "txt-srcFile": "來源檔案",
-      "txt-srcFilePath": "來源檔案路徑"
+      "txt-srcFilePath": "來源檔案路徑",
+      "txt-compareResult": "比對結果"
     },
     "inventory": {
       "txt-discoveredVulnerability": "軟體漏洞清單",
@@ -723,7 +713,6 @@
     "txt-NotSupport": "未支援",
     "txt-Waiting": "等待中"
   },
-
   "alert": {
     "txt-encodeDecode": "編碼轉譯",
     "txt-toLocalTime": "轉換本地時間",
@@ -798,7 +787,6 @@
     "txt-deleteSelectTrackList": "$t(txt-delete)$t(alert.txt-selectTrackAlertList)",
     "txt-deleteSelectTrackListMsg": "$t(txt-delete-msg)$t(alert.txt-selectTrackAlertList)"
   },
-
   "events": {
     "connections": {
       "txt-enterQueryName": "輸入查詢條件名稱",
@@ -815,11 +803,29 @@
       "txt-noOpenQuery": "查詢條件名稱不得為空白",
       "txt-threasholdCount": "統整次數不得大於1,000或小於0",
       "txt-addPatternScript": "定義告警條件",
+      "txt-addPatternScriptPattern": "Pattern",
+      "txt-addPatternScriptMl": "ML規則",
       "txt-addSOCScript": "定義自動化事件單條件",
       "txt-enableSOCScript": "啟用自動化事件單條件",
       "txt-enableIncidentTemplate": "事件單範本建立",
       "txt-isEnabled": "是否啟用",
       "txt-public": "共用",
+      "txt-ruleType": "規則類型",
+      "txt-ruleType-abnormal": "異常",
+      "txt-ruleType-unusual": "例外",
+      "txt-groupBy": "Group by",
+      "txt-y": "Y",
+      "txt-trainingDataTime": "訓練資料時間",
+      "txt-trainingDataTimePrefix": "最近",
+      "txt-trainingDataTimePostfix": "天",
+      "txt-trainingTimeScale": "訓練時間尺度",
+      "txt-trainingTimeScale-minute": "分鐘",
+      "txt-trainingTimeScale-hour": "小時",
+      "txt-trainingTimeScale-day": "日",
+      "txt-thresholdWeight": "靈敏度臨界值",
+      "txt-thresholdWeightLow": "低",
+      "txt-thresholdWeightMedium": "中",
+      "txt-thresholdWeightHigh": "高",
       "txt-patternQuery1": "統整",
       "txt-patternQuery2": "分鐘資料，超過或等於",
       "txt-patternQuery3": "次成為告警",
@@ -853,7 +859,6 @@
     "txt-statisticsBarChart": "統計長條圖",
     "txt-statisticsTableChart": "統計列表"
   },
-
   "soar": {
     "txt-ruleList": "SOAR規則清單",
     "txt-soarSettings": "SOAR通用基本設定",
@@ -975,7 +980,6 @@
     "txt-error-9100": "解析Json失敗",
     "txt-error-9102": "因其他錯誤發生導致未執行"
   },
-
   "configuration": {
     "threat": {
       "txt-threatFromDttm": "情資時間(起)",
@@ -987,7 +991,6 @@
       "txt-threatToDttmLTEThreatFromDttm": "情資時間(訖)不可小於等於情資時間(起)"
     }
   },
-
   "notifications": {
     "txt-sendEmails": "寄信",
     "txt-testEmails": "寄信測試",
@@ -1038,7 +1041,6 @@
       "txt-SMS-CHT": "CHT"
     }
   },
-
   "edge-management": {
     "txt-today": "今日",
     "txt-past7days": "最近7天",
@@ -1107,20 +1109,17 @@
       "txt-acuIndicatorsTrend": "情資數量曲線圖"
     }
   },
-
   "es-management": {
     "txt-exportMsg": "匯出後索引將會刪除。請確認是否匯出",
     "txt-turnOffMsg": "請確認是否關閉索引",
     "txt-turnOffMsg-more": "關閉index會導致該index隔日資料無法查詢"
   },
-
   "threat-severity-mapping": {
     "txt-severityMapping": "情資嚴重等級管理",
     "txt-typeInfo": "類型內容",
     "txt-lastUpdateTime": "最近更新時間",
     "txt-severityMissing": "嚴重等級類型不得為空白"
   },
-
   "system-defined-pattern": {
     "txt-addPatternScript": "新增Pattern",
     "txt-patternInfo": "Pattern內容",
@@ -1129,7 +1128,15 @@
     "txt-queryScriptMissing": "查詢條件不得為空白",
     "txt-deletePattern": "$t(txt-delete)Pattern"
   },
-
+  "ml-rule-management": {
+    "txt-addMlRuleScript": "新增ML規則",
+    "txt-mlRuleInfo": "ML規則內容",
+    "txt-lastUpdateTime": "最近更新時間",
+    "txt-mlRuleMissing": "ML規則名稱不得為空白",
+    "txt-queryScriptMissing": "查詢條件不得為空白",
+    "txt-deleteMlRule": "$t(txt-delete)ML規則",
+    "txt-trainingResult": "訓練結果"
+  },
   "hmd-scan": {
     "txt-hmdSettings": "HMD設定",
     "txt-hmdDownload": "HMD$t(txt-download)",
@@ -1311,7 +1318,6 @@
       "_SubjectName": "簽署人"
     }
   },
-
   "auto-settings": {
     "txt-ipRange": "IP Range",
     "txt-AD": "AD",
@@ -1324,7 +1330,6 @@
     "txt-connectionsFail": "連線失敗",
     "txt-connectionsSuccess": "連線成功"
   },
-
   "network-inventory": {
     "txt-hmdSettings": "HMD設定",
     "txt-hmdDownload": "HMD$t(txt-download)",
@@ -1363,7 +1368,6 @@
     "txt-deleteDevice": "$t(txt-delete)$t(txt-device)",
     "txt-deleteDeviceMsg": "$t(txt-delete-msg)$t(txt-device)"
   },
-
   "network-topology": {
     "txt-assignedDevice": "所屬$t(txt-device)",
     "txt-noAvailableDevice": "無裝置可選擇",
@@ -1383,52 +1387,42 @@
     "txt-seatNameEmpty": "請輸入座位名稱",
     "txt-saveSuccess": "儲存成功",
     "txt-maxCharError": "不得超過64字元",
-
     "txt-addOwner": "$t(txt-add)$t(ipFields.owner)",
     "txt-editOwner": "$t(txt-edit)$t(ipFields.owner)",
     "txt-deleteOwner": "$t(txt-delete)$t(txt-network-owner)",
     "txt-deleteOwnerMsg": "$t(txt-delete-msg)$t(txt-network-owner)",
-
     "txt-addIP": "$t(txt-add)$t(ipFields.ip)",
     "txt-editIP": "$t(txt-edit)$t(ipFields.ip)",
     "txt-deleteIP": "$t(txt-delete)$t(ipFields.ip)",
     "txt-deleteIPMsg": "$t(txt-delete-msg)$t(ipFields.ip)",
-
     "txt-deleteFloorPlan": "$t(txt-delete)$t(txt-floorMap)",
-
     "txt-addFloor": "$t(txt-add)$t(txt-floor)",
     "txt-editFloor": "$t(txt-edit)$t(txt-floor)",
     "txt-saveFloor": "$t(txt-save)$t(txt-floor)",
     "txt-deleteFloor": "$t(txt-delete)$t(txt-floor)",
     "txt-deleteFloorMsg": "$t(txt-delete-msg)$t(txt-floor)",
-
     "txt-editFloorMap": "$t(txt-edit)$t(txt-floorMap)",
     "txt-deleteFloorMap": "$t(txt-delete)$t(txt-floorMap)",
     "txt-deleteFloorMapMsg": "$t(txt-delete-msg)$t(txt-floorMap)",
-
     "txt-addTree": "$t(txt-add)$t(txt-tree)",
     "txt-editTree": "$t(txt-edit)$t(txt-tree)",
     "txt-selectTree": "$t(txt-select)$t(txt-tree)",
     "txt-deselectTree": "$t(txt-deselect)$t(txt-tree)",
     "txt-removeTree": "$t(txt-remove)$t(txt-tree)",
-
     "txt-addSeat": "$t(txt-add)$t(txt-seat)",
     "txt-editSeat": "$t(txt-edit)$t(txt-seat)",
     "txt-deleteSeat": "$t(txt-delete)$t(txt-seat)",
     "txt-deleteSeatMsg": "$t(txt-delete-msg)$t(txt-seat)",
     "txt-removeSeat": "從樓層中$t(txt-delete)此座位",
-
     "txt-addDevice": "$t(txt-add)$t(txt-device)",
     "txt-removeDevice": "從座位中$t(txt-delete)此裝置"
   },
-
   "vansOwner": {
     "ip": "IP網段",
     "domainAccount": "網域帳號",
     "unitCode": "機關代碼",
     "unitCodeRegex": "機關代碼Regex"
   },
-
   "attacksFields" : {
     "timestamp": "日期",
     "sensor": "Sensor",
