--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -699,6 +699,24 @@
     "isDetection": "啟用",
     "enabledStatus": "啟用狀態"
   },
+  "syslogMlRuleTableFields": {
+    "patternName": "ML規則名稱",
+    "observeColumn": "目標欄位",
+    "ruleType": "規則類型",
+    "ruleType-abnormal": "異常",
+    "ruleType-unusual": "例外",
+    "trainingStatus": "訓練狀態",
+    "trainingStatus-Waiting": "等待中",
+    "trainingStatus-Training": "訓練中",
+    "trainingStatus-Trained": "訓練完成",
+    "createDttm": "建立時間",
+    "lastUpdateDttm": "資料最近更新時間",
+    "queryScript": "查詢條件",
+    "severity": "嚴重等級",
+    "isDetection": "啟用",
+    "enabledStatus": "啟用狀態",
+    "trainingCurve": "訓練曲線"
+  },
   "threatsTableFields": {
     "threatText": "情資內容",
     "threatType": "情資類型",
