--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -710,7 +710,8 @@
     "trainingStatus-Training": "訓練中",
     "trainingStatus-Trained": "訓練完成",
     "createDttm": "建立時間",
-    "lastUpdateDttm": "資料最近更新時間",
+    "lastUpdateDttm": "最近更新時間",
+    "modelUpdateDttm": "模型最近更新時間",
     "queryScript": "查詢條件",
     "severity": "嚴重等級",
     "isDetection": "啟用",
